Thu Dec 30 20:18:32 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* win32/Makefile.sub: ditto.

Thu Dec 30 20:57:09 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* Makefile.in: Check V=1 argument if run "make clean" or similar.

Thu Dec 30 20:41:50 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* Makefile.in: Kill ugly line continuation.

Thu Dec 30 11:49:40 2010  Tanaka Akira  <akr@fsij.org>

	* sprintf.c: parenthesize macro arguments.

Wed Dec 29 21:20:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (maygvl_copy_stream_wait_readwrite): define if USE_SENDFILE

Wed Dec 29 20:37:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: strip current directory prefix.

	* enc/depend (clean): remove name2ctype.h when out-of-place build.

	* win32/Makefile.sub (clean-enc): pass V to inferior make.

Wed Dec 29 18:23:46 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* re.c (rb_reg_expr_str): need to escape if the coderange is invalid.

Wed Dec 29 10:06:51 2010  Tanaka Akira  <akr@fsij.org>

	* signal.c: parenthesize macro arguments.

Wed Dec 29 07:22:15 2010  Eric Hodel  <drbrain@segment7.net>

	* lib/rake/rdoctask.rb: Deprecate in favor of rdoc/task.

Wed Dec 29 07:07:06 2010  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc: Import RDoc 3.1

Tue Dec 28 18:36:38 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c, include/ruby/intern.h (rb_compile_error_with_enc): new
	  function to raise syntax error, with source encoding'ed message.

	* parse.y (compile_error): use above function.
	  [ruby-core:33951] (#4217)

Tue Dec 28 07:37:38 2010  Tanaka Akira  <akr@fsij.org>

	* ruby.c: parenthesize macro arguments.

Tue Dec 28 07:17:11 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add ARGF.write and so on.

Tue Dec 28 07:12:38 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add new magic-comment. (warn-indent) [ruby-core:25442]

Tue Dec 28 04:32:37 2010  Aaron Patterson <aaron@tenderlovemaking.com>
